[gd_scene load_steps=2 format=3 uid="uid://sdbkhelamsiy"]

[ext_resource type="Script" uid="uid://bu75vmwgxw5h6" path="res://multiplayer_menu.gd" id="1_6py18"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 2.0
offset_right = 5.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6py18")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 146.0
offset_right = 263.0
offset_bottom = 32.0

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host
"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Join IP Address"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerListLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.234
anchor_top = 0.005
anchor_right = 0.355
anchor_bottom = 0.157
offset_left = 0.431976
offset_top = -0.24
offset_right = 0.039978
offset_bottom = 0.264
